# postgres-diagnostics-multicloud

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: sample_snapshot.json
sql/aws/: 01_rds_memory_drilldown.sql  02_rds_temp_heavy_queries.sql
sql/gcp/: 01_cloudsql_connection_patterns.sql  02_cloudsql_temp_heavy_databases.sql
sql/generic/: 01_memory_settings.sql  02_connection_pressure.sql  03_temp_spill.sql  04_pg_stat_statements_spills.sql  05_pg_buffercache_hot_relations.sql  06_table_health.sql  07_long_running_transactions.sql  08_replication_slot_health.sql  09_vacuum_progress.sql  10_index_usage.sql  11_pgstattuple_approx.sql  12_database_sizes.sql  13_cache_hit_ratio.sql  14_largest_relations.sql  15_table_bloat_estimate.sql
src/pg_memory_diagnostics/: __init__.py  analysis.py  catalog.py  cli.py  collector.py  connection.py  html_report.py  knowledge.py  models.py
src/pg_memory_diagnostics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analysis.py  test_connection.py  test_html_report.py
